efeito parallax e imagens adicionadas

--- a/index.html
+++ b/index.html
@@ -11,86 +11,109 @@
         <h1>Tudo sobre o jogo Hollow Knight</h1>
         <p>Contexto, história, informações de bosses e muito mais!</p>
     </header>
-
-
     <nav>
         <a href="#">Home</a><a href="#">Novidades</a><a href="#">Ao Vivo</a><a href="#">Sobre nós</a>
     </nav>
 
-
     <main>
-        <div class="foto-unica">
+        <div id="banner">
             <img src="images/hollow-knight.jpeg" alt="Hollow Knight, jogo indie da Team Cherry">
         </div>
         <hr>
         <article>
             <h1>O que é Hollow Knight?</h1>
-            <p>Hollow Knight é um clássico jogo 2D desenvolvido e publicado pela <a href="#">Team Cherry</a>, onde nosso personagem se encontra num vasto mundo, sem objetivos inicialmente, e precisa explorá-lo, revelando o passado sombrio de <strong>Hallownest</strong>, lugar onde o jogo principal se passa.</p>
+            <p>Hollow Knight é um clássico jogo 2D desenvolvido e publicado pela <a href="https://www.teamcherry.com.au/" target="_blank" rel="external">Team Cherry</a>, onde nosso personagem se encontra num vasto mundo, sem objetivos inicialmente, e precisa explorá-lo, revelando o passado sombrio de <strong>Hallownest</strong>, lugar onde o jogo principal se passa.</p>
             <p>Sendo um jogo de exploração, você deve se aprofundar nas profundezas do reino de Hallownest para conhecer todos os lugares que escondem segredos, enfrentando bosses e inimigos em sua jornada. Hollow Knight pode até ser em 2D, mas com certeza é um jogo eletrizante quando se está no meio de uma luta, lutando pela sobrevivência, bem como pode ser um jogo encantador enquanto explora as maravilhas escondidas do reino, acompanhadas de gráficos sensacionais com uma música de qualidade.</p>
-            <p>A equipe da Team Cherry, por mais que seja famosa, conta apenas com quatro pessoas! São elas  <a href="#">Ari Gibson</a>, <a href="#">William Pellen</a>, <a href="#">Jack Vine</a> e o compositor <a href="#">Christopher Larkin</a>. Eles são responsáveis pela ambientação do jogo, as lutas emocionantes, as mecânicas criativas e até as famosas trilhas sonoras feita pelo Larkin são relembradas pelos fãs, transmitindo emoção em cada batalha!</p>
+            <p>A equipe da Team Cherry, por mais que seja famosa, conta apenas com quatro pessoas! São elas <a href="https://www.instagram.com/aripie/" target="_blank" rel="external">Ari Gibson</a>, <a href="https://www.instagram.com/wilbooooooooooooooooo/" target="_blank" rel="external">William Pellen</a>, <a href="https://www.instagram.com/realjackvine/?locale=pt_BR&hl=en" target="_blank" rel="external">Jack Vine</a> e o compositor <a href="https://www.instagram.com/christopher.john.larkin/" target="_blank" rel="external">Christopher Larkin</a>. Eles são responsáveis pela ambientação do jogo, as lutas emocionantes, as mecânicas criativas e até as famosas trilhas sonoras feita pelo Larkin são relembradas pelos fãs, transmitindo emoção em cada batalha!</p>
 
             <h2>História de Hollow Knight</h2>
-            <p>Hollow Knight começa com uma cutscene que narra algum acontecimento importante: <strong>um casúlo, que contém três máscaras encustadas e exala uma fumaça laranja, é mostrado na tela, seguido de um grito sinistro</strong>. Nosso personagem, que não tem nome, é atraído para o reino de Hollownest por alguma força que não sabemos qual é. Após passarmos pelo tutorial, chegamos na primeira cidade do jogo: <a href="#">Dirtmouth, A Cidade Desvanescente</a></p>
-            <p>Nela, conhecemos o nosso primeiro amigo: <a href="#">o Ancião</a>, que conta para nosso personagem (observação aqui, pois nosso personagem é mudo) como muitos aventureiros já tinham passado por Dirtmouth antes, mas todos se perderam quando decidiram entrar num poço próximo dali que prometia aventuras inimagináveis. Nosso personagem não pensa duas vezes antes de entrar no poço, e é aqui que conhecemos <a href="#">Encruzilhadas Esquecidas</a>, uma das diversas áreas do jogo. E é aí onde nosso jogo realmente começa.</p>
+            <p>Hollow Knight começa com uma cutscene que narra algum acontecimento importante: <strong>um casúlo, que contém três máscaras encustadas e exala uma fumaça laranja, é mostrado na tela, seguido de um grito sinistro</strong>. Nosso personagem, que não tem nome, é atraído para o reino de Hollownest por alguma força que não sabemos qual é. Após passarmos pelo tutorial, chegamos na primeira cidade do jogo: <a href="https://hollowknight.fandom.com/wiki/Dirtmouth" target="_blank" rel="external">Dirtmouth, A Cidade Desvanescente</a></p>
+            <p>Nela, conhecemos o nosso primeiro amigo: <a href="https://hollowknight.fandom.com/pt/wiki/Inseto_Anci%C3%A3o" target="_blank" rel="external">o Ancião</a>, que conta para nosso personagem (observação aqui, pois nosso personagem é mudo) como muitos aventureiros já tinham passado por Dirtmouth antes, mas todos se perderam quando decidiram entrar num poço próximo dali que prometia aventuras inimagináveis. Nosso personagem não pensa duas vezes antes de entrar no poço, e é aqui que conhecemos <strong>Encruzilhadas Esquecidas</strong>, uma das diversas áreas do jogo. E é aí onde nosso jogo realmente começa.</p>
         </article>
 
         <article>
-            <h1>Todos os bosses de Hollow Knight</h1>
-            <p>Por mais que Hollow Knight tenha sido criado por apenas quatro pessoas, <strong>o jogo conta com nada menos que quarenta e sete bosses!</strong>. Esse número considera bosses "piadas" que não podem bater no nosso personagem (Como o <a href="#">Zote</a>), e considera variantes dos bosses. Vamos ver cada um mais de perto!</p>
+            <h1>Principais áreas e bosses</h1>
+            <p>Por mais que Hollow Knight tenha sido criado por apenas quatro pessoas, <strong>o jogo conta com nada menos que quarenta e sete bosses!</strong>. Neste artigo, será mostrada primeiramente a área e seu resumo e depois o principal boss dessa área com seu respectivo resumo.</p>
 
-            <section>
-                <h2>Mãe Mosca</h2>
-                <div class="foto-responsiva">
-                    <picture>
-                        <source media="(max-width: 650px)" srcset="images/mae-mosca-pq.jpg" type="image/jpeg">
-                        <img src="images/mae-mosca.jpg" alt="">
-                    </picture>
-                </div>
-                <p>Por mais que a Mãe Mosca esteja aqui, ela é na verdade um mini boss opcional no Hollow Knight, que pode ser encontrada na primeira área do jogo, <strong>Encruzilhadas Esquecidas</strong>. <strong>Ela é encontrada dormindo dentro de uma sala</strong>, e acorda quando o jogador a ataca, fazendo as portas se fecharem e começar batalha.
-                Depois de morta, ela faz com que um exame de moscas seja liberado, que o jogador deve matar para liberar a saída</p>
-                <hr>
-            </section>
+            <section id="encruzilhada-esquecida">
+                <h2>Encruzilhada Esquecida</h2>
+                <div class="parallax"></div>
+                <p>A Encruzilhada Esquecida é uma das primeiras áreas que os jogadores encontram em Hollow Knight, servindo como uma introdução ao vasto e misterioso reino de Hallownest. Apesar de sua aparente simplicidade, esse local carrega consigo uma atmosfera de mistério e decadência, perfeitamente alinhada com o tom sombrio e melancólico do jogo.</p>
+                <p>Uma vez um ponto vital de conexão para várias partes do reino, a Encruzilhada agora está em ruínas. Seus habitantes, criaturas que já tiveram propósitos definidos dentro de Hallownest, estão agora corrompidos pela Infecção, vagando sem rumo e atacando o protagonista, o Cavaleiro. A deterioração desse lugar ecoa a queda de Hallownest, uma civilização que outrora prosperou, mas foi lentamente consumida por seus próprios segredos.</p>
 
-            <section>
                 <h2>Falso Cavaleiro</h2>
-                <div class="foto-responsiva">
+                <div class="boss">
                     <picture>
-                        <source media="(max-width: 650px)" srcset="images/falso-cavalheiro-pq.jpeg" type="image/jpeg">
-                        <img src="images/falso-cavalheiro.jpeg" alt="">
+                        <source media="(max-width: 600px)" srcset="images/B-falso-cavalheiro-pq.jpeg" type="jpeg">
+                        <img src="images/B-falso-cavalheiro.jpeg" alt="Falso Cavaleiro">
                     </picture>
                 </div>
-                <p>Esse sim é o <strong>primeiro boss oficial do jogo</strong>. O Falso Cavaleiro é encontrado também nas <strong>Encruzilhadas Esquecidas</strong>, dentro de uma sala que, quando o jogador entra e passa até um certo ponto, sua batalha se inicia automaticamente, sem que o jogador precise fazer alguma coisa. Ele contém uma forte armadura que usa para se proteger e utiliza uma maça pesada como arma, o que faz sua batalha ser árdua para um jogador iniciante, mas no nível certo para ainda conseguir se divertir com o primeiro boss.</p>
+                <p>O Falso Cavaleiro é encontrado nas <strong>Encruzilhadas Esquecidas</strong>, dentro de uma sala que, quando o jogador entra e passa até um certo ponto, sua batalha se inicia automaticamente, sem que o jogador precise fazer alguma coisa. Ele contém uma forte armadura que usa para se proteger e utiliza uma maça pesada como arma, o que faz sua batalha ser árdua para um jogador iniciante, mas no nível certo para ainda conseguir se divertir com o primeiro boss.</p>
                 <p>O Falso Cavalheiro é, na verdade, um verme que habita o corpo de um dos <a href="#">Cindo Grandes Cavaleiros de Hallownest</a>, que se apropriou desse corpo para tentar proteger seus irmãos. Isso é descoberto quando matamos ele e o verme sai de seu corpo, morrendo logo em seguida. Também descobrimos que sua maça na verdade é um outro verme que se utilizava de arma.</p>
                 <hr>
             </section>
 
-            <section>
+            <section id="caminho-verde">
+                <h2>Caminho Verde</h2>
+                <div class="parallax"></div>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolorum perferendis sed aperiam assumenda quis dolores itaque saepe ab cumque laborum error in maxime blanditiis asperiores, molestias, aut, commodi quam possimus sapiente ipsa fuga dicta omnis! Ipsa veritatis vel corporis dolorum veniam minus omnis quis, pariatur nisi commodi odio perspiciatis excepturi fugiat perferendis facere consectetur, id, corrupti earum explicabo recusandae ducimus. Aliquid, cupiditate! Fugit molestias eos illum voluptates neque totam libero tenetur repellendus soluta, consectetur optio fugiat velit commodi quam, alias ipsa excepturi ea ullam natus veritatis recusandae odio laborum quo eaque. Aspernatur officiis laudantium exercitationem, molestias totam neque? Veniam illum deserunt commodi, molestias, nostrum totam velit quisquam nesciunt sit at assumenda inventore ab maiores provident amet. Adipisci, error laborum maxime corrupti, nostrum rerum quisquam molestias porro quo suscipit nihil ipsa? Dolorum, temporibus enim accusantium fugiat veritatis nostrum quasi magnam. Cupiditate tempore nulla dignissimos est incidunt dicta ex voluptates culpa voluptatibus. Et sed possimus dolorem at reprehenderit eius? Cupiditate explicabo facilis alias, nisi tenetur modi possimus earum consequatur quas dolorum officia commodi consequuntur hic dolorem voluptate cumque eius quia sapiente excepturi ut architecto exercitationem magnam delectus. Perspiciatis officia exercitationem est sapiente, nisi suscipit similique natus voluptate unde laborum eveniet tempore velit?</p>
                 <h2>Hornet</h2>
-                <div class="foto-responsiva">
+                <div class="boss">
                     <picture>
-                        <source media="(max-width: 650px)" srcset="images/hornet-pq.jpeg" type="image/jpeg">
-                        <img src="images/hornet.jpeg" alt="">
+                        <source media="(max-width: 600px)" srcset="images/B-hornet-pq.jpeg" type="jpeg">
+                        <img src="images/B-hornet.jpeg" alt="Hornet">
                     </picture>
                 </div>
-                <p></p>
                 <hr>
             </section>
 
-            <section>
-                <h2>Imenso Batedor Muscoso</h2>
-                <div class="foto-responsiva">
+            <section id="ermos-fungicos">
+                <h2>Ermos Fúngicos</h2>
+                <div class="parallax"></div>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos aspernatur reprehenderit natus mollitia rerum ipsa molestiae quidem blanditiis fuga, autem quasi. Nulla magni cumque quae nesciunt dolorum ex modi alias numquam sapiente amet natus sequi optio eaque beatae ullam, vitae a libero error quidem quia quod quo. Ullam molestias, nemo ut suscipit at, totam accusantium ducimus, eius possimus asperiores autem? Facere deleniti beatae minus laudantium voluptatem ad temporibus ut quisquam. At, quo animi. Tempore, placeat alias architecto sunt itaque distinctio quod, officiis molestias provident molestiae quam impedit doloremque numquam explicabo totam esse? Tempore odit minus rem delectus ea earum deserunt, repudiandae voluptas voluptatibus enim inventore magnam minima est quibusdam expedita error, vel ducimus fugiat aperiam adipisci praesentium incidunt debitis? Illo minus quod non cum tempore, alias ut. Laborum, quam ducimus? Blanditiis culpa sunt debitis dolores delectus nobis est aliquam repellendus sint? Cumque impedit, accusantium temporibus quos, iure voluptates modi quidem numquam, dolores fugiat animi quaerat. Voluptatem sapiente debitis eos quis dolor id, quo reiciendis atque. Doloremque voluptatum optio esse corporis et? Maxime quidem harum fugiat maiores voluptas corrupti aut, eaque sint veritatis est at sit voluptatibus? Aut itaque beatae numquam hic consequuntur, commodi esse iure, molestias porro saepe, adipisci voluptates?</p>
+                <h2>Lordes Louva-a-Deus</h2>
+                <div class="boss">
                     <picture>
-                        <img src="images/imenso-batedor-musgoso.jpg" alt="">
+                        <source media="(max-width: 600px)" srcset="images/B-lordes-louva-a-deus-pq.png" type="png">
+                        <img src="images/B-lordes-louva-a-deus.png" alt="Lordes Louva-a-Deus">
                     </picture>
                 </div>
-                <p></p>
                 <hr>
-            </section> 
+            </section>
+
+            <section id="ninho-profundo">
+                <h2>Ninho Profundo</h2>
+                <div class="parallax"></div>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptas tenetur dicta consequatur dolore, veritatis ab nihil quo magni illo maxime deleniti, culpa magnam iusto aspernatur ullam. Consectetur magni, odio est recusandae ipsum repellendus ea maxime incidunt expedita non adipisci quis culpa deserunt quos modi inventore, nihil, laudantium voluptate? Aut perspiciatis ducimus officiis dolorem? Explicabo consequatur reprehenderit praesentium illum ullam quo cum eaque doloremque, similique facere amet veritatis iure maxime minus maiores sunt aut voluptatem aliquam. Deserunt molestiae alias, quidem odio esse unde excepturi officia aliquid quisquam veritatis deleniti, nulla sunt laboriosam. Molestias obcaecati laborum, culpa beatae ex fugit dicta quisquam, dolorum, id rem nisi ab itaque alias sapiente debitis. Perspiciatis alias accusantium, fugiat necessitatibus, nihil beatae, recusandae delectus culpa repellat quia voluptatum enim. Velit saepe ea, sapiente laudantium laboriosam ullam, deserunt porro dolores delectus magnam labore odio. Architecto aliquam accusantium hic incidunt consequuntur quas laudantium. Est, deserunt cum nostrum modi eius non in commodi voluptatem dignissimos similique eveniet aliquam ad earum corporis quibusdam. Quisquam, obcaecati quia. Nulla hic saepe distinctio delectus quod ut fugit exercitationem eius a assumenda. Culpa animi unde eum fugit vitae expedita quod suscipit minus delectus alias maiores aut reiciendis odio iste quae, dolorum magnam, soluta cupiditate.</p>
+                <h2>Nosk</h2>
+                <div class="boss">
+                    <picture>
+                        <source media="(max-width: 600px)" srcset="images/" type="image/">
+                        <img src="" alt="">
+                    </picture>
+                </div>
+                <hr>
+            </section>
+
+            <section id="cidade-das-lagrimas">
+                <h2>Cidade das Lágrimas</h2>
+                <div class="parallax"></div>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni nostrum sapiente fuga adipisci nesciunt animi qui tempora ullam laborum exercitationem dolores enim, necessitatibus numquam doloribus commodi magnam hic fugiat eligendi inventore consectetur facere sint nulla! Non ullam est hic, tempore corrupti deserunt repellat, officiis sapiente excepturi consequuntur, illum autem. Unde dicta repudiandae explicabo officiis! Itaque sed dolor eaque, repellendus nisi sit perspiciatis! Sint reprehenderit officia, eius beatae, earum natus omnis ex laborum placeat velit consequatur nobis accusamus perferendis tempora magni et voluptatem quisquam, cumque mollitia doloribus culpa nisi harum veritatis. Quidem sapiente aspernatur, fuga commodi ab nam facere nisi, et totam qui, minus deserunt ex. Dolores possimus commodi iusto excepturi ipsam dolorem saepe cumque molestias officia, nesciunt quia labore repellendus dignissimos beatae adipisci facere fuga totam? Quod soluta beatae autem omnis repellat. Voluptatibus beatae, ipsam aliquid ad minus reprehenderit molestiae eius ex quisquam cum unde corporis modi ab vero, omnis illum inventore, deserunt consequuntur rem similique? Rerum ex adipisci repellendus, eum quam incidunt natus dolore voluptatem vero expedita sequi mollitia aut nemo quibusdam, maxime dolorum nam? Molestiae, cum quas? Pariatur, nisi consequatur commodi nihil soluta quisquam odio cum corporis repellat quidem aspernatur voluptatem quibusdam voluptates minima amet dignissimos iste est.</p>
+                <div class="boss">
+                    <picture>
+                        <source media="(max-width: 600px)" srcset="images/" type="image/">
+                        <img src="" alt="">
+                    </picture>
+                </div>
+                <h2>Mestre das Almas</h2>
+                <hr>
+            </section>
+               
         </article>
 
         <aside>
             <h2>Silksong: a promessa de uma nova aventura</h2>
-            <div class="foto-responsiva">
+            <div id="silksong">
                 <picture>
                     <img src="images/silksong.jpg" alt="Hollow Knight: Silksong, o novo jogo da Team Cherry que será lançado">
                 </picture>
