falta só o aside

--- a/index.html
+++ b/index.html
@@ -39,12 +39,12 @@
                 <h2>Encruzilhada Esquecida</h2>
                 <div class="parallax"></div>
                 <p>A Encruzilhada Esquecida é uma das primeiras áreas que os jogadores encontram em Hollow Knight, servindo como uma introdução ao vasto e misterioso reino de Hallownest. Apesar de sua aparente simplicidade, esse local carrega consigo uma atmosfera de mistério e decadência, perfeitamente alinhada com o tom sombrio e melancólico do jogo.</p>
-                <p>Uma vez um ponto vital de conexão para várias partes do reino, a Encruzilhada agora está em ruínas. Seus habitantes, criaturas que já tiveram propósitos definidos dentro de Hallownest, estão agora corrompidos pela Infecção, vagando sem rumo e atacando o protagonista, o Cavaleiro. A deterioração desse lugar ecoa a queda de Hallownest, uma civilização que outrora prosperou, mas foi lentamente consumida por seus próprios segredos.</p>
+                <p>Uma vez um ponto vital de conexão para várias partes do reino, <strong>a Encruzilhada agora está em ruínas.</strong> Seus habitantes, criaturas que já tiveram propósitos definidos dentro de Hallownest, estão agora corrompidos pela <a href="https://hollowknight.fandom.com/pt/wiki/Infec%C3%A7%C3%A3o" target="_blank" rel="external">Infecção,</a> vagando sem rumo e atacando o protagonista, o Cavaleiro. A deterioração desse lugar ecoa a queda de Hallownest, uma civilização que outrora prosperou, mas foi lentamente consumida por seus próprios segredos.</p>
 
                 <h2>Falso Cavaleiro</h2>
                 <div class="boss">
                     <picture>
-                        <source media="(max-width: 600px)" srcset="images/B-falso-cavalheiro-pq.jpeg" type="jpeg">
+                        <source media="(max-width: 600px)" srcset="images/B-falso-cavalheiro-pq.jpeg" type="image/jpeg">
                         <img src="images/B-falso-cavalheiro.jpeg" alt="Falso Cavaleiro">
                     </picture>
                 </div>
@@ -56,56 +56,69 @@
             <section id="caminho-verde">
                 <h2>Caminho Verde</h2>
                 <div class="parallax"></div>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolorum perferendis sed aperiam assumenda quis dolores itaque saepe ab cumque laborum error in maxime blanditiis asperiores, molestias, aut, commodi quam possimus sapiente ipsa fuga dicta omnis! Ipsa veritatis vel corporis dolorum veniam minus omnis quis, pariatur nisi commodi odio perspiciatis excepturi fugiat perferendis facere consectetur, id, corrupti earum explicabo recusandae ducimus. Aliquid, cupiditate! Fugit molestias eos illum voluptates neque totam libero tenetur repellendus soluta, consectetur optio fugiat velit commodi quam, alias ipsa excepturi ea ullam natus veritatis recusandae odio laborum quo eaque. Aspernatur officiis laudantium exercitationem, molestias totam neque? Veniam illum deserunt commodi, molestias, nostrum totam velit quisquam nesciunt sit at assumenda inventore ab maiores provident amet. Adipisci, error laborum maxime corrupti, nostrum rerum quisquam molestias porro quo suscipit nihil ipsa? Dolorum, temporibus enim accusantium fugiat veritatis nostrum quasi magnam. Cupiditate tempore nulla dignissimos est incidunt dicta ex voluptates culpa voluptatibus. Et sed possimus dolorem at reprehenderit eius? Cupiditate explicabo facilis alias, nisi tenetur modi possimus earum consequatur quas dolorum officia commodi consequuntur hic dolorem voluptate cumque eius quia sapiente excepturi ut architecto exercitationem magnam delectus. Perspiciatis officia exercitationem est sapiente, nisi suscipit similique natus voluptate unde laborum eveniet tempore velit?</p>
+                <p>O Caminho Verde é caracterizado por seus tons de verde exuberante, plantas florescentes e árvores que cobrem quase toda a paisagem. Ele parece um jardim que cresceu descontroladamente, com grandes trepadeiras e fungos que preenchem o ambiente. Ao explorar, o jogador caminha por passarelas de madeira, plantações densas e charcos lamacentos.</p>
+                <p>A atmosfera é relaxante, com uma trilha sonora suave, mas o ar enevoado e as sombras ocultas entre as plantas criam uma sensação de mistério. Isso reflete bem o equilíbrio entre a vida e o perigo iminente que é típico do mundo de Hollow Knight.</p>
+                <p>O Caminho Verde também introduz um novo obstáculo para o jogador: poços e piscinas de ácido. Esses lagos ácidos são mortais ao toque, e o Cavaleiro deve usar suas habilidades de movimentação com precisão para evitar cair neles. Mais tarde no jogo, o jogador pode desbloquear a habilidade de nadar nesses poços ao obter o <a href="https://hollowknight.fandom.com/pt/wiki/L%C3%A1grima_de_Isma" target="_blank" rel="external">Lágrima de Isma</a>, mas até então, a presença de ácido é um perigo significativo.</p>
                 <h2>Hornet</h2>
                 <div class="boss">
                     <picture>
-                        <source media="(max-width: 600px)" srcset="images/B-hornet-pq.jpeg" type="jpeg">
+                        <source media="(max-width: 600px)" srcset="images/B-hornet-pq.jpeg" type="image/jpeg">
                         <img src="images/B-hornet.jpeg" alt="Hornet">
                     </picture>
                 </div>
+                <p>Hornet é a filha de <a href="https://hollowknight.fandom.com/pt/wiki/Herrah#:~:text=Herrah%20foi%20a%20rainha%20da,deixando%20Herrah%20sem%20nenhum%20herdeiro." target="_blank" rel="external">Herrah, a Besta</a>, uma das três <a href="https://hollowknight.fandom.com/pt/wiki/Sonhadores" target="_blank" rel="external">Sonhadoras</a> que selaram o Vazio, e do Rei Pálido, governante de Hallownest. Isso a torna meio-vazia, devido à linhagem do Rei Pálido, e uma das figuras-chave para entender o colapso e a possível redenção do reino. Seu papel é proteger Hallownest, agindo como guardiã dos segredos do reino e do <a href="https://hollowknight.fandom.com/pt/wiki/Selos" target="_blank" rel="external">Selo Negro</a>, que mantém o poder do Vazio contido.</p>
+                <p>Ao longo da jornada, Hornet aparece em momentos cruciais, testando o Cavaleiro e o forçando a provar sua força e propósito. Embora ela inicialmente pareça antagonista, sua verdadeira motivação é garantir que apenas aqueles dignos possam seguir adiante, já que a missão do Cavaleiro pode determinar o destino de Hallownest.</p>
                 <hr>
             </section>
 
             <section id="ermos-fungicos">
                 <h2>Ermos Fúngicos</h2>
                 <div class="parallax"></div>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos aspernatur reprehenderit natus mollitia rerum ipsa molestiae quidem blanditiis fuga, autem quasi. Nulla magni cumque quae nesciunt dolorum ex modi alias numquam sapiente amet natus sequi optio eaque beatae ullam, vitae a libero error quidem quia quod quo. Ullam molestias, nemo ut suscipit at, totam accusantium ducimus, eius possimus asperiores autem? Facere deleniti beatae minus laudantium voluptatem ad temporibus ut quisquam. At, quo animi. Tempore, placeat alias architecto sunt itaque distinctio quod, officiis molestias provident molestiae quam impedit doloremque numquam explicabo totam esse? Tempore odit minus rem delectus ea earum deserunt, repudiandae voluptas voluptatibus enim inventore magnam minima est quibusdam expedita error, vel ducimus fugiat aperiam adipisci praesentium incidunt debitis? Illo minus quod non cum tempore, alias ut. Laborum, quam ducimus? Blanditiis culpa sunt debitis dolores delectus nobis est aliquam repellendus sint? Cumque impedit, accusantium temporibus quos, iure voluptates modi quidem numquam, dolores fugiat animi quaerat. Voluptatem sapiente debitis eos quis dolor id, quo reiciendis atque. Doloremque voluptatum optio esse corporis et? Maxime quidem harum fugiat maiores voluptas corrupti aut, eaque sint veritatis est at sit voluptatibus? Aut itaque beatae numquam hic consequuntur, commodi esse iure, molestias porro saepe, adipisci voluptates?</p>
+                <p>Ermos Fúngicos (Fungal Wastes) é uma das áreas subaquáticas e subterrâneas de Hollow Knight, localizada a sul do Caminho Verde. É um dos locais mais bizarros e intrigantes do jogo, com uma atmosfera fúngica e uma variedade de inimigos e desafios únicos.</p>
+                <p>Os Ermos Fúngicos são caracterizados por uma paisagem dominada por fungos e esporos. O ambiente é sombrio e úmido, com grandes cogumelos e plantas que cobrem as paredes e o chão. A área é uma mistura de cavernas e cavernas subaquáticas, criando uma sensação de claustrofobia e isolamento. A paleta de cores é dominada por tons de verde, marrom e cinza, com um brilho esverdeado que emite de algumas das formas de vida fúngica.</p>   
                 <h2>Lordes Louva-a-Deus</h2>
                 <div class="boss">
                     <picture>
-                        <source media="(max-width: 600px)" srcset="images/B-lordes-louva-a-deus-pq.png" type="png">
+                        <source media="(max-width: 600px)" srcset="images/B-lordes-louva-a-deus-pq.png" type="image/png">
                         <img src="images/B-lordes-louva-a-deus.png" alt="Lordes Louva-a-Deus">
                     </picture>
                 </div>
+                <p>Os Lordes Louva-a-Deus são caracterizados por sua aparência de louva-a-deus gigante, com longos membros cortantes e uma postura imponente. Eles têm uma aparência majestosa, com corpos esbeltos e armaduras que imitam as de um guerreiro inseto. A batalha contra eles é complexa e exige boa coordenação e conhecimento dos padrões de ataque.</p>
+                <p>A batalha contra os Lordes Louva-a-Deus ocorre em uma arena circular com várias plataformas. A luta se divide em três fases distintas, cada uma trazendo novos desafios e ataques. Os Lordes Louva-a-Deus frequentemente trabalham em conjunto, exigindo que o jogador se concentre em dois inimigos ao mesmo tempo.</p>
                 <hr>
             </section>
 
             <section id="ninho-profundo">
                 <h2>Ninho Profundo</h2>
                 <div class="parallax"></div>
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptas tenetur dicta consequatur dolore, veritatis ab nihil quo magni illo maxime deleniti, culpa magnam iusto aspernatur ullam. Consectetur magni, odio est recusandae ipsum repellendus ea maxime incidunt expedita non adipisci quis culpa deserunt quos modi inventore, nihil, laudantium voluptate? Aut perspiciatis ducimus officiis dolorem? Explicabo consequatur reprehenderit praesentium illum ullam quo cum eaque doloremque, similique facere amet veritatis iure maxime minus maiores sunt aut voluptatem aliquam. Deserunt molestiae alias, quidem odio esse unde excepturi officia aliquid quisquam veritatis deleniti, nulla sunt laboriosam. Molestias obcaecati laborum, culpa beatae ex fugit dicta quisquam, dolorum, id rem nisi ab itaque alias sapiente debitis. Perspiciatis alias accusantium, fugiat necessitatibus, nihil beatae, recusandae delectus culpa repellat quia voluptatum enim. Velit saepe ea, sapiente laudantium laboriosam ullam, deserunt porro dolores delectus magnam labore odio. Architecto aliquam accusantium hic incidunt consequuntur quas laudantium. Est, deserunt cum nostrum modi eius non in commodi voluptatem dignissimos similique eveniet aliquam ad earum corporis quibusdam. Quisquam, obcaecati quia. Nulla hic saepe distinctio delectus quod ut fugit exercitationem eius a assumenda. Culpa animi unde eum fugit vitae expedita quod suscipit minus delectus alias maiores aut reiciendis odio iste quae, dolorum magnam, soluta cupiditate.</p>
+                <p>O Ninho Profundo (Deepnest) é uma das áreas mais sombrias e inquietantes de Hollow Knight. Localizada abaixo dos Ermos Fúngicos e ao norte do Abismo, o Ninho Profundo é um labirinto de cavernas profundas e complexas, habitado por criaturas bizarras e hostis. A área é conhecida por sua atmosfera opressiva e os desafios únicos que apresenta aos jogadores.</p>
+                <p>O Ninho Profundo é um ambiente subterrâneo, escuro e labiríntico, com uma paleta de cores predominantemente escura e sombria. As cavernas são repletas de teias de aranha e estruturas orgânicas que refletem o habitat de uma colônia de aranhas gigantes. A iluminação é mínima, e o ambiente é constantemente envolto em névoa, o que adiciona uma sensação de claustrofobia e mistério.</p>
                 <h2>Nosk</h2>
                 <div class="boss">
                     <picture>
-                        <source media="(max-width: 600px)" srcset="images/" type="image/">
-                        <img src="" alt="">
+                        <source media="(max-width: 600px)" srcset="images/B-nosk-pq.jpg" type="image/jpeg">
+                        <img src="images/B-nosk.jpg" alt="Nosk">
                     </picture>
                 </div>
+                <p>Nosk é uma das criaturas mais aterrorizantes do mundo de Hollow Knight, conhecido por sua <strong>habilidade de imitar a aparência de outras figuras</strong>, especialmente personagens queridos ou importantes para o protagonista, o Cavaleiro. Nosk é encontrado nas profundezas da área chamada Cavernas dos Restos, onde atrai o jogador para uma armadilha, assumindo a forma de uma figura familiar. Esse encontro leva a uma das batalhas mais assustadoras do jogo.</p>
+                <p>Nosk tem uma forma grotesca e aracnídea, com um corpo grande e patas longas. O que torna o chefe perturbador é sua habilidade de usar o rosto de outros personagens, dando a impressão de que ele está personificando alguém próximo ao protagonista. Quando você o segue, ele revela sua verdadeira e monstruosa forma.</p>
                 <hr>
             </section>
 
             <section id="cidade-das-lagrimas">
                 <h2>Cidade das Lágrimas</h2>
                 <div class="parallax"></div>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni nostrum sapiente fuga adipisci nesciunt animi qui tempora ullam laborum exercitationem dolores enim, necessitatibus numquam doloribus commodi magnam hic fugiat eligendi inventore consectetur facere sint nulla! Non ullam est hic, tempore corrupti deserunt repellat, officiis sapiente excepturi consequuntur, illum autem. Unde dicta repudiandae explicabo officiis! Itaque sed dolor eaque, repellendus nisi sit perspiciatis! Sint reprehenderit officia, eius beatae, earum natus omnis ex laborum placeat velit consequatur nobis accusamus perferendis tempora magni et voluptatem quisquam, cumque mollitia doloribus culpa nisi harum veritatis. Quidem sapiente aspernatur, fuga commodi ab nam facere nisi, et totam qui, minus deserunt ex. Dolores possimus commodi iusto excepturi ipsam dolorem saepe cumque molestias officia, nesciunt quia labore repellendus dignissimos beatae adipisci facere fuga totam? Quod soluta beatae autem omnis repellat. Voluptatibus beatae, ipsam aliquid ad minus reprehenderit molestiae eius ex quisquam cum unde corporis modi ab vero, omnis illum inventore, deserunt consequuntur rem similique? Rerum ex adipisci repellendus, eum quam incidunt natus dolore voluptatem vero expedita sequi mollitia aut nemo quibusdam, maxime dolorum nam? Molestiae, cum quas? Pariatur, nisi consequatur commodi nihil soluta quisquam odio cum corporis repellat quidem aspernatur voluptatem quibusdam voluptates minima amet dignissimos iste est.</p>
+                <p>A Cidade das Lágrimas (City of Tears) é uma das áreas centrais e mais icônicas de Hollow Knight. Localizada a leste do Caminho Verde e a norte do Ermos Fúngicos, a Cidade das Lágrimas é uma metrópole subterrânea dilapidada que serve como o coração político e cultural de Hallownest.</p>
+                <p>A Cidade das Lágrimas é uma vasta e sombria metrópole em ruínas, com uma arquitetura grandiosa e imponente, mas agora decadente e cheia de umidade. As ruas estão cobertas de água, e o ambiente é constantemente chuvoso, criando um clima melancólico e opressivo. O design do local é inspirado por uma mistura de estilos góticos e arquiteturas majestosas, refletindo a antiga glória do lugar antes de seu colapso.</p>
+                <h2>Mestre das Almas</h2>
                 <div class="boss">
                     <picture>
-                        <source media="(max-width: 600px)" srcset="images/" type="image/">
-                        <img src="" alt="">
+                        <source media="(max-width: 600px)" srcset="images/B.soul-master-pq.png" type="image/png">
+                        <img src="images/B.soul-master.png" alt="Mestre das Almas">
                     </picture>
                 </div>
-                <h2>Mestre das Almas</h2>
+                <p>O Mestre das Almas é uma figura trágica em Hollow Knight. Ele, assim como muitos dos seres em Hallownest, foi corrompido pela praga que aflige o reino. Obcecado em adquirir poder e usar a alma como fonte de energia, o Mestre das Almas acreditava que poderia transcender a mortalidade e alcançar um estado superior. Sua obsessão levou a experimentos perigosos com a alma, o que resultou na destruição de muitos de seus seguidores e na transformação da Cidade das Lágrimas em um local sombrio e desolado.</p>
+                <p>O Mestre das Almas tem uma aparência imponente, vestindo uma túnica longa e flutuando no ar. Ele é facilmente reconhecido por sua cabeça em forma de máscara de xamã, com olhos grandes e penetrantes. Durante a batalha, ele usa ataques poderosos baseados em alma, demonstrando seu controle avançado sobre essa energia.</p>
                 <hr>
             </section>
                
