finalização do site

--- a/index.html
+++ b/index.html
@@ -83,8 +83,8 @@
                         <img src="images/B-lordes-louva-a-deus.png" alt="Lordes Louva-a-Deus">
                     </picture>
                 </div>
-                <p>Os Lordes Louva-a-Deus são caracterizados por sua aparência de louva-a-deus gigante, com longos membros cortantes e uma postura imponente. Eles têm uma aparência majestosa, com corpos esbeltos e armaduras que imitam as de um guerreiro inseto. A batalha contra eles é complexa e exige boa coordenação e conhecimento dos padrões de ataque.</p>
-                <p>A batalha contra os Lordes Louva-a-Deus ocorre em uma arena circular com várias plataformas. A luta se divide em três fases distintas, cada uma trazendo novos desafios e ataques. Os Lordes Louva-a-Deus frequentemente trabalham em conjunto, exigindo que o jogador se concentre em dois inimigos ao mesmo tempo.</p>
+                <p>As Lordes Louva-a-Deus são caracterizadas por sua aparência de louva-a-deus gigante, com longos membros cortantes e uma postura imponente. Elas têm uma aparência majestosa, com corpos esbeltos e armaduras que imitam as de um guerreiro inseto. A batalha contra elas é complexa e exige boa coordenação e conhecimento dos padrões de ataque.</p>
+                <p>A batalha contra as Lordes Louva-a-Deus ocorre em uma arena circular com várias plataformas. A luta se divide em três fases distintas, cada uma trazendo novos desafios e ataques. As Lordes Louva-a-Deus frequentemente trabalham em conjunto, exigindo que o jogador se concentre em dois inimigos ao mesmo tempo.</p>
                 <hr>
             </section>
 
@@ -125,9 +125,10 @@
         </article>
 
         <aside>
-            <h2>Silksong: a promessa de uma nova aventura</h2>
+            <h3>Silksong: a promessa de uma nova aventura</h3>
             <div id="silksong">
                 <picture>
+                    <source media="(max-width: 600px)" srcset="images/silksong-pq.jpg" type="image/jpeg">
                     <img src="images/silksong.jpg" alt="Hollow Knight: Silksong, o novo jogo da Team Cherry que será lançado">
                 </picture>
             </div>
